--- a/SpotifyPlaylistSaver/SpotifyPlaylistSaver.csproj
+++ b/SpotifyPlaylistSaver/SpotifyPlaylistSaver.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.AzureKeyVault.HostingStartup" Version="2.0.4" />
     <PackageReference Include="SpotifyAPI.Web" Version="5.1.0" />
   </ItemGroup>
 
